--- a/src/docs/howto-start-docker.adoc
+++ b/src/docs/howto-start-docker.adoc
@@ -5,7 +5,7 @@
 [source,shell]
 ----
 docker ps -a
-docker kill pocket_square_sort_shuffle; docker rm pocket_square_sort_shuffle
+docker kill pocket-square-sort-shuffle; docker rm pocket-square-sort-shuffle
 ----
 
 == Start service
@@ -13,5 +13,5 @@ docker kill pocket_square_sort_shuffle; docker rm pocket_square_sort_shuffle
 [source,shell]
 ----
 docker pull pocketsquare/pocket-square-sort-shuffle:$TAG
-docker run -dit --name pocket_square_sort_shuffle --link pocket_square_articles -p 28104:5000 pocketsquare/pocket-square-sort-shuffle:$TAG
+docker run -dit --name pocket-square-sort-shuffle --link pocket-square-articles -p 28104:5000 pocketsquare/pocket-square-sort-shuffle:$TAG
 ----
